src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  top: 4%;
  left: 5%;
  width: fit-content;
  box-sizing: border-box;
  margin: auto;
  padding: 0 20px 20px;
  border-radius: 4px;
  opacity: 1;

  color: #141f33;
  font-family: -apple-system, BlinkMacSystemFont, sans-serif, Helvetica Neue;
  font-weight: 300;
  line-height: 1.5;

  /* //Glass Effect */

  /* // const background = 'https://mir-s3-cdn-cf.behance.net/project_modules/disp/9ed8ee27869045.5636c14483938.gif'
// const background = 'https://cdn.pixabay.com/animation/2024/06/03/17/54/17-54-20-606_512.gif'
// const background = 'https://cdn.pixabay.com/animation/2024/05/30/10/16/10-16-19-835_512.gif'
// const background = 'https://cdn.pixabay.com/animation/2024/05/30/10/01/10-01-43-509_512.gif'
// const background = 'https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/80740a27869045.5636c15d36644.jpg'
// const background = 'https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/943def27869045.5636c16d56e4e.jpg'
const background = 'https://cdn.pixabay.com/photo/2016/09/29/10/08/halloween-1702531_1280.jpg'
// const background = 'https://cdn.pixabay.com/photo/2023/10/17/19/29/pumpkins-8322245_1280.jpg' */

  /* background: url("https://cdn.pixabay.com/photo/2016/09/29/10/08/halloween-1702531_1280.jpg"); */
  background-size: cover;
  border-radius: 16px;

  backdrop-filter: blur(10px);

  /* max-height: 300px; */
  overflow-y: auto;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

h1 {
  font-size: 16px;
  color: #e3e3e3;
  text-shadow: #4c4b4b 1px 0 10px;
}

em {
  font-weight: 400;
  font-style: normal;
}
table {
  opacity: 1;
  background: transparent;
  border-radius: 4px;
}
th {
  background: black;
  color: white;
}
th,
td {
  border: 1px solid #000;
  padding: 2px 6px;
  border-radius: 4px;
  font-size: 16px;
}
td {
  background: black;
  opacity: 0.8;
  color: white;
}

.todo-container p {
  padding: 15px;
  border-radius: 8px;
  color: white;
  font-weight: bold;
  margin: 4px;
  /* // opacity:0.5; */
  color: maroon;
}

.filter-group {
  display: flex;
  flex-wrap: wrap;
}

.filter-buttons {
  background: black;
  border: none;
  color: white;
  padding: 10px 16px;
  margin: 12px 2px;
  border-radius: 4px;
  font-weight: bold;
}

.filter-buttons:hover,
.filter-buttons-active {
  background: white;
  color: black;
  cursor: pointer;
}

.tag {
  display: inline-block;
  margin: auto;
  margin-right: 4px;
  width: 10px;
  height: 10px;
  border-radius: 50%;
}

@media only screen and (max-width: 768px) {
  th,
  td {
    font-size: 12px;
    min-width: fit-content;
  }

  .filter-buttons {
    margin: 0 4px 2px 0;
    padding: 6px 8px;
  }

  .tag {
    height: 5px;
    width: 5px;
  }
  table {
    overflow-y: auto;
    width: 100%;
    display: block;
  }
  body {
    width: auto;
  }
}

